[package]
name = "local_oauth_client"
version = "0.0.1"
authors = ["bcow@iki.fi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "1.3"
log = "0.4"
micro_http_server = "0.0.3"
url = "1.7"
open = "1.2"
bincode = "1.1"
serde = { version = "1.0",  features = ["derive"] }
time = "0.1"

# eof